# SadTalker

./: .dockerignore  Dockerfile  README.md  app_sadtalker.py  docker-compose-image.yml  docker_compose.yml  launcher.py  pyproject.toml  requirements.txt  start.py  start.sh
docs/: install.md
scripts/: ps_downloadmodel.ps1
src/: globals.py  gradio_demo.py  test_audio2coeff.py
src/facerender/: animate.py
src/facerender/modules/: make_animation.py
