[project]
name = "sadtalker"
version = "0.1.0"
description = "photo + voice = video"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
        "absl-py==2.1.0",
    "addict==2.4.0",
    "aiofiles==23.2.1",
    "annotated-types==0.7.0",
    "anyio==4.5.2",
    "audioread==3.0.1",
    "av==12.3.0",
    "basicsr==1.4.2",
    "cachetools==5.5.0",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "contourpy==1.1.1",
    "cycler==0.12.1",
    "decorator==5.1.1",
    "exceptiongroup==1.2.2",
    "face-alignment==1.3.5",
    "facexlib==0.3.0",
    "fastapi==0.115.6",
    "ffmpy==0.5.0",
    "filelock==3.16.1",
    "filterpy==1.4.5",
    "fonttools==4.55.3",
    "fsspec==2024.12.0",
    "future==1.0.0",
    "gfpgan==1.3.8",
    "google-auth==2.37.0",
    "google-auth-oauthlib==1.0.0",
    "gradio==4.44.1",
    "gradio_client==1.3.0",
    "grpcio==1.68.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.27.0",
    "idna==3.10",
    "imageio==2.19.3",
    "imageio-ffmpeg==0.4.7",
    "importlib_metadata==8.5.0",
    "importlib_resources==6.4.5",
    "Jinja2==3.1.5",
    "joblib==1.1.0",
    "kiwisolver==1.4.7",
    "kornia==0.6.8",
    "librosa==0.9.2",
    "llvmlite==0.41.1",
    "lmdb==1.5.1",
    "Markdown==3.7",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "matplotlib==3.7.5",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.1",
    "numba==0.58.1",
    "numpy==1.23.4",
    "oauthlib==3.2.2",
    "opencv-python==4.10.0.84",
    "orjson==3.10.12",
    "packaging==24.2",
    "pandas==2.0.3",
    "pillow==10.4.0",
    "platformdirs==4.3.6",
    "pooch==1.8.2",
    "protobuf==5.29.2",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.1",
    "pycparser==2.22",
    "pydantic==2.10.4",
    "pydantic_core==2.27.2",
    "pydub==0.25.1",
    "Pygments==2.18.0",
    "pyparsing==3.1.4",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "pytz==2024.2",
    "PyWavelets==1.4.1",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "resampy==0.3.1",
    "rich==13.9.4",
    "rsa==4.9",
    "ruff==0.8.4",
    "safetensors==0.4.5",
    "scikit-image==0.19.3",
    "scikit-learn==1.1.3",
    "scipy==1.10.1",
    "semantic-version==2.10.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soundfile==0.12.1",
    "starlette==0.41.3",
    "sympy==1.13.3",
    "tb-nightly==2.14.0a20230808",
    "tensorboard-data-server==0.7.2",
    "threadpoolctl==3.5.0",
    "tifffile==2023.7.10",
    "tomli==2.2.1",
    "tomlkit==0.12.0",
    "torch==2.4.1+cu121",
    "torchaudio==2.4.1+cu121",
    "torchvision==0.19.1+cu121",
    "tqdm==4.67.1",
    "typer==0.15.1",
    "typing_extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "uv==0.5.11",
    "uvicorn==0.33.0",
    "websockets==12.0",
    "Werkzeug==3.0.6",
    "yacs==0.1.8",
    "yapf==0.43.0",
    "zipp==3.20.2"
]
